// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircularProgress can be determinate 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    aria-valuenow="0.3"
    class="rmwc-circular-progress"
  >
    <svg
      class="rmwc-circular-progress__circle"
      viewBox="0 0 24 24"
    >
      <circle
        class="rmwc-circular-progress__path"
        cx="12"
        cy="12"
        r="10"
        style="stroke-dasharray: 18.84955592153876, 666.66%;"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`CircularProgress can be sizes 1`] = `
<div>
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    class="rmwc-circular-progress rmwc-circular-progress--indeterminate rmwc-circular-progress--thickerstroke"
    style="font-size: 72px;"
  >
    <svg
      class="rmwc-circular-progress__circle"
      viewBox="0 0 72 72"
    >
      <circle
        class="rmwc-circular-progress__path"
        cx="36"
        cy="36"
        r="30"
      />
    </svg>
  </div>
</div>
`;

exports[`CircularProgress renders 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    class="rmwc-circular-progress rmwc-circular-progress--indeterminate"
  >
    <svg
      class="rmwc-circular-progress__circle"
      viewBox="0 0 24 24"
    >
      <circle
        class="rmwc-circular-progress__path"
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </div>
</DocumentFragment>
`;
